# agentshield

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  Zero_Shot_Embedding_Drift_Detection_A_Lightweight_Defense_Against_Prompt_Injections_in_LLMs.ipynb  agentshield.example.yaml  pyproject.toml  ragshield.example.yaml
docs/: COST_ANALYSIS.md  DEPLOYMENT.md  FINETUNING.md  PLATFORM_DESIGN.md
examples/: simple_rag.py
scripts/: finetune_local.py
scripts/agentshield-embeddings-finetuned/: README.md  calibration.json  results.json
scripts/agentshield-embeddings-finetuned/checkpoint-3051/: rng_state.pth
scripts/agentshield-embeddings-finetuned/checkpoint-800/: README.md  rng_state.pth  trainer_state.json
scripts/cache/: clean_pairs.json
scripts/ragshield-embeddings-finetuned/checkpoint-3051/: README.md  trainer_state.json
src/agentshield/: __init__.py
src/agentshield/api/: __init__.py  decorator.py  scan.py
src/agentshield/cleaning/: __init__.py  base.py  finetuned.py  heuristic.py  hybrid.py  llm.py
src/agentshield/cli/: __init__.py  main.py
src/agentshield/core/: __init__.py  exceptions.py  results.py  setup.py  shield.py
src/agentshield/detectors/: __init__.py  base.py  zedd.py
src/agentshield/integrations/: __init__.py  langchain.py
src/agentshield/providers/: __init__.py  local.py  mlx.py  openai.py
src/agentshield/threshold/: __init__.py  calibrator.py  manager.py
src/pyagentshield/: __init__.py
src/pyagentshield/api/: __init__.py  decorator.py  scan.py
src/pyagentshield/cleaning/: __init__.py  finetuned.py  hybrid.py  llm.py
src/pyagentshield/cli/: main.py
src/pyagentshield/core/: __init__.py  config.py  exceptions.py  setup.py  shield.py
src/pyagentshield/data/: __init__.py
src/pyagentshield/detectors/: __init__.py  base.py  zedd.py
src/pyagentshield/integrations/: __init__.py  langchain.py
src/pyagentshield/providers/: __init__.py  base.py  local.py  mlx.py  openai.py
src/pyagentshield/remote/: client.py
src/pyagentshield/telemetry/: __init__.py  client.py  events.py
src/pyagentshield/threshold/: __init__.py  calibrator.py  decision.py  fingerprint.py  manager.py  registry.py
src/ragshield/: __init__.py
src/ragshield/api/: __init__.py  decorator.py  scan.py
src/ragshield/cleaning/: __init__.py  finetuned.py  hybrid.py  llm.py
src/ragshield/cli/: __init__.py  main.py
src/ragshield/core/: __init__.py  config.py  exceptions.py  results.py  shield.py
src/ragshield/data/: __init__.py
src/ragshield/detectors/: __init__.py  base.py  zedd.py
src/ragshield/integrations/: __init__.py  langchain.py
src/ragshield/providers/: __init__.py  base.py  mlx.py  openai.py
src/ragshield/threshold/: __init__.py  calibrator.py  manager.py  registry.py
tests/: __init__.py  conftest.py  test_config.py  test_decorator.py  test_exceptions.py  test_fingerprint.py  test_heuristic_cleaner.py  test_hybrid_cleaner.py  test_langchain.py  test_openai_compat.py  test_results.py  test_scan_api.py  test_setup.py  test_shield.py  test_telemetry.py  test_threshold.py  test_zedd.py
