[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentshield"
version = "0.1.0"
description = "Prompt injection detection for Agents using ZEDD (Zero-Shot Embedding Drift Detection)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "AgentShield Contributors" }
]
keywords = [
    "llm",
    "rag",
    "prompt-injection",
    "security",
    "embeddings",
    "langchain",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.0",
    "typing_extensions>=4.0.0;python_version<'3.10'",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
langchain = ["langchain-core>=0.1.0"]
llamaindex = ["llama-index-core>=0.10.0"]
cli = ["typer>=0.9.0", "rich>=13.0.0"]
# Finetuned cleaner - for inference only (lighter weight)
finetuned = [
    "transformers>=4.36.0",
    "peft>=0.7.0",
    "accelerate>=0.25.0",
    "bitsandbytes>=0.41.0;platform_system!='Darwin' or platform_machine!='arm64'",
]
# Full training dependencies (for Google Colab or GPU servers)
training = [
    "agentshield[finetuned]",
    "datasets>=2.14.0",
    "trl>=0.7.0",
    "wandb>=0.15.0",
]
# MLX for Apple Silicon Macs (M1/M2/M3)
mlx = [
    "mlx>=0.4.0;platform_system=='Darwin' and platform_machine=='arm64'",
    "mlx-lm>=0.4.0;platform_system=='Darwin' and platform_machine=='arm64'",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = ["agentshield[openai,langchain,finetuned,cli,mlx]"]

[project.scripts]
agentshield = "agentshield.cli.main:app"

[project.urls]
Homepage = "https://github.com/autralabs/agentshield"
Documentation = "https://github.com/autralabs/agentshield#readme"
Repository = "https://github.com/autralabs/agentshield"
Issues = "https://github.com/autralabs/agentshield/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agentshield"]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=agentshield --cov-report=term-missing"
